--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "cmake.sourceDirectory": "${workspaceFolder}/build"
+    "cmake.sourceDirectory": "c:\\Users\\deshi\\Code\\FIR-filter\\minor-project-build"
 }
